Fix to Java 9 newInstance() deprecated